@@ -56,7 +56,7 @@ public class TownUpgrade {
 
     public int getCost(int level) {
         if(cost.size() <= level)
-            return cost.get(cost.size()-1);
+            return cost.getLast();
         return cost.get(level);
     }
     public Map<String, Integer> getPrerequisites() {
@@ -84,53 +84,53 @@ public class TownUpgrade {
         boolean isMaxLevel = townUpgradeLevel >= this.getMaxLevel();
 
 
-        lore.add(Lang.GUI_TOWN_LEVEL_UP_UNI_DESC1.get(townUpgradeLevel + "/" + this.getMaxLevel()));
+        lore.add(Lang.GUI_TOWN_LEVEL_UP_UNI_DESC1.get(lang, townUpgradeLevel + "/" + this.getMaxLevel()));
         if(isMaxLevel)
-            lore.add(Lang.GUI_TOWN_LEVEL_UP_UNI_DESC2_MAX_LEVEL.get());
+            lore.add(Lang.GUI_TOWN_LEVEL_UP_UNI_DESC2_MAX_LEVEL.get(lang));
         else
-            lore.add(Lang.GUI_TOWN_LEVEL_UP_UNI_DESC2.get(townUpgradeLevel + 1 , this.getCost(townUpgradeLevel)));
+            lore.add(Lang.GUI_TOWN_LEVEL_UP_UNI_DESC2.get(lang, townUpgradeLevel + 1 , this.getCost(townUpgradeLevel)));
 
 
         //Pre-requisite
         if(!prerequisites.isEmpty()){
-            lore.add(Lang.GUI_TOWN_LEVEL_UP_UNI_DESC3.get());
+            lore.add(Lang.GUI_TOWN_LEVEL_UP_UNI_DESC3.get(lang));
 
             for(Map.Entry<String,Integer> entry : this.getPrerequisites().entrySet()) {
                 String prerequisiteName = entry.getKey();
                 Integer levelNeeded = entry.getValue();
                 Integer currentLevel = townLevelClass.getUpgradeLevel(prerequisiteName);
                 if(levelNeeded <= townLevelClass.getUpgradeLevel(prerequisiteName)){
-                    lore.add(Lang.GUI_TOWN_LEVEL_UP_UNI_DESC3_1.get(DynamicLang.get(lang, prerequisiteName), currentLevel, levelNeeded));
+                    lore.add(Lang.GUI_TOWN_LEVEL_UP_UNI_DESC3_1.get(lang, DynamicLang.get(lang, prerequisiteName), currentLevel, levelNeeded));
                 }
                 else {
-                    lore.add(Lang.GUI_TOWN_LEVEL_UP_UNI_DESC3_2.get(DynamicLang.get(lang, prerequisiteName), currentLevel, levelNeeded));
+                    lore.add(Lang.GUI_TOWN_LEVEL_UP_UNI_DESC3_2.get(lang, DynamicLang.get(lang, prerequisiteName), currentLevel, levelNeeded));
                 }
             }
         }
 
         //Benefits
         if(!isMaxLevel){    //If max level do not show this part
-            lore.add(Lang.GUI_TOWN_LEVEL_UP_UNI_DESC4.get());
+            lore.add(Lang.GUI_TOWN_LEVEL_UP_UNI_DESC4.get(lang));
             for(Map.Entry<String,Integer> entry : this.getBenefits().entrySet()){
                 String prerequisiteName = entry.getKey();
                 Integer value = entry.getValue();
                 if(value > 0)
-                    lore.add(Lang.GUI_TOWN_LEVEL_UP_UNI_DESC4_1.get(DynamicLang.get(lang, prerequisiteName), value));
+                    lore.add(Lang.GUI_TOWN_LEVEL_UP_UNI_DESC4_1.get(lang, DynamicLang.get(lang, prerequisiteName), value));
                 else
-                    lore.add(Lang.GUI_TOWN_LEVEL_UP_UNI_DESC4_2.get(DynamicLang.get(lang, prerequisiteName), value));
+                    lore.add(Lang.GUI_TOWN_LEVEL_UP_UNI_DESC4_2.get(lang, DynamicLang.get(lang, prerequisiteName), value));
             }
         }
 
         //Total Benefits
-        lore.add(Lang.GUI_TOWN_LEVEL_UP_UNI_DESC5.get());
+        lore.add(Lang.GUI_TOWN_LEVEL_UP_UNI_DESC5.get(lang));
         for(Map.Entry<String,Integer> entry : this.getBenefits().entrySet()){
             String benefitName = entry.getKey();
             Integer value = entry.getValue();
             if(value > 0){
-                lore.add(Lang.GUI_TOWN_LEVEL_UP_UNI_DESC4_1.get(DynamicLang.get(lang, benefitName), value * townUpgradeLevel));
+                lore.add(Lang.GUI_TOWN_LEVEL_UP_UNI_DESC4_1.get(lang, DynamicLang.get(lang, benefitName), value * townUpgradeLevel));
             }
             else {
-                lore.add(Lang.GUI_TOWN_LEVEL_UP_UNI_DESC4_2.get(DynamicLang.get(lang, benefitName), value * townUpgradeLevel));
+                lore.add(Lang.GUI_TOWN_LEVEL_UP_UNI_DESC4_2.get(lang, DynamicLang.get(lang, benefitName), value * townUpgradeLevel));
             }
         }
         return lore;
@@ -166,7 +166,7 @@ public class TownUpgrade {
         return ItemBuilder.from(upgradeItemStack).asGuiItem(event -> {
             event.setCancelled(true);
             if(!isPrerequisiteMet(townLevel)){
-                player.sendMessage(TanChatUtils.getTANString() + Lang.GUI_TOWN_LEVEL_UP_UNI_REQ_NOT_MET.get());
+                player.sendMessage(Lang.GUI_TOWN_LEVEL_UP_UNI_REQ_NOT_MET.get(tanPlayer.getLang()));
                 SoundUtil.playSound(player, SoundEnum.NOT_ALLOWED);
                 return;
             }
